tests/rec/rec.exp
Error: issue-598.js:7
  7: function bar(y: F<number>): F<string> { return y; }
                                                    ^ F. This type is incompatible with the expected return type of
  7: function bar(y: F<number>): F<string> { return y; }
                                 ^^^^^^^^^ F
  Type argument `A` is incompatible:
      7: function bar(y: F<number>): F<string> { return y; }
                           ^^^^^^ number. This type is incompatible with
      7: function bar(y: F<number>): F<string> { return y; }
                                       ^^^^^^ string

Error: test.js:6
  6: (p.x: string); // error
      ^^^ Cannot cast `p.x` to string because number [1] is incompatible with string [2].
  References:
    5: var p: P<number> = new P;
                ^^^^^^ [1]: number
    6: (p.x: string); // error
             ^^^^^^ [2]: string

Error: test.js:9
  9: (pstar: number); // error, but limit potentially unbounded number of errors!
      ^^^^^ Cannot cast `pstar` to number because `P` [1] is incompatible with number [2].
  References:
    9: (pstar: number); // error, but limit potentially unbounded number of errors!
        ^^^^^ [1]: `P`
    9: (pstar: number); // error, but limit potentially unbounded number of errors!
               ^^^^^^ [2]: number

Error: test.js:13
 13: (pstar.x: string); // error
      ^^^^^^^ Cannot cast `pstar.x` to string because number [1] is incompatible with string [2].
  References:
    5: var p: P<number> = new P;
                ^^^^^^ [1]: number
   13: (pstar.x: string); // error
                 ^^^^^^ [2]: string

Error: test.js:16
 16: (pstar.x: string); // error
      ^^^^^^^ Cannot cast `pstar.x` to string because `P` [1] is incompatible with string [2].
  References:
   16: (pstar.x: string); // error
        ^^^^^^^ [1]: `P`
   16: (pstar.x: string); // error
                 ^^^^^^ [2]: string

Error: test2.js:30
 30: ((new C: C<number>): D<string>) // error: number ~/~ string
                ^^^^^^ Cannot cast `new C()` to `D` because in type argument `X`, number [1] is incompatible with string [2].
  References:
   30: ((new C: C<number>): D<string>) // error: number ~/~ string
                  ^^^^^^ [1]: number
   30: ((new C: C<number>): D<string>) // error: number ~/~ string
                              ^^^^^^ [2]: string

Error: test3.js:13
 13:   return x; // terminate despite expanding types, error
              ^ P. This type is incompatible with the expected return type of
 12: function bar(x: P<number>): () => P<number> {
                                 ^^^^^^^^^^^^^^^ function type
  The return is incompatible:
     10: type P<X> = () => Q<P<X>>;
                           ^^^^^^^ Q. This type is incompatible with
     12: function bar(x: P<number>): () => P<number> {
                                           ^^^^^^^^^ P
      Callable property is incompatible:
         12: function bar(x: P<number>): () => P<number> {
                                               ^^^^^^^^^ P. Callable signature not found in
         10: type P<X> = () => Q<P<X>>;
                               ^^^^^^^ Q


Found 7 errors
